harness/fixtures/enforce-arrow-function/bad/multiline-signature.ts
function multiline(a: string, b: number, c: boolean) {
  return a + b + c;
}
